2011-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.96 released.

        * Fixed code to complement FullAuto - now invokes
          default set and other defaults in Solaris.


2011-09-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.95 released.

        * Added code to complement FullAuto - now invokes
          default set and other defaults.


2011-09-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.94 released.

        * Added code to complement FullAuto - now invokes
          default set when one is defined.


2011-08-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.93 released.

        * Added code to complement FullAuto - fixed BerkeleyDB
          error.


2011-08-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.92 released.

        * Added code to complement FullAuto - fixed error
          reporting.


2011-08-18  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.91 released.

        * Added code to complement FullAuto.


2011-08-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.90 released.

        * Added code to complement FullAuto.


2011-08-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.89 released.

        * Added code to complement FullAuto.


2011-07-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.88 released.

        * Better handling of top script indicated menu_config.


2011-07-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.87 released.

        * Bug fix to new code from 07-05


2011-07-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.86 released.

        * Added code to complement FullAuto. New code works
          with FullAuto to enable user to select and save
          a default startup menu file.

