@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 76a11ee00b019aa4bbacd65b1f39dd80549871ca ChangeLog
+SHA1 3c7c8ae019c76178a88a6ef9e575455a2b205d74 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 60d86bd39abfb01794c1d58f90580cdf5e15afe0 META.yml
+SHA1 c5bef09e2e2ec80439b4b582d627b3b6445ba546 META.yml
 SHA1 14e358b68232b26478c491ba66290d4dc07ae02a Makefile.PL
 SHA1 dd0ef50a94b1bbe303b0f05c353dfe97cda04f3b README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 2d9b056700a8279be96d2e6a03276c33c1801624 lib/Term/Menus.pm
+SHA1 9f49d13d76ca3dcfa973234943c753fc37c243ba lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk5s3FQACgkQdsVAdUjO9Int0ACbBUcbDa5KlWUQwS3mlhSlVGeE
-520An0lYnz/QVLEo8bLmSH2VO5wosbN4
-=GGxF
+iEYEARECAAYFAk5wIUIACgkQdsVAdUjO9InaxACgikOvyNzzilUqPxnEXB949Qxk
+QzoAnAhzIi3HrETTMyj/qiRTF53sXgJU
+=5pAY
 -----END PGP SIGNATURE-----
