@@ -1,3 +1,11 @@
+2011-09-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.97 released.
+
+        * Fixed code to complement FullAuto - 
+          default set and other defaults.
+
+
 2011-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.96 released.
